--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,7 @@
 	<string name="border_top">Border Top</string>
     <string name="border_bottom">Border Bottom</string>
     <string name="image_url">Image Url</string>
-    
+    <string name="header_view_img">header_view_img</string>
+	<string name="app_start_txt">MYdemo</string>
+	    
 </resources>
