--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="image_url">Image Url</string>
     <string name="header_view_img">header_view_img</string>
 	<string name="app_start_txt">MYdemo</string>
-	    
+    <string name="demo_text_str">demo</string>
+    <string name="demo1_txt_str">使用 AsyncTask 来下载图片</string>
+
 </resources>
