--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="action_map_location">定位到当前地址</string>
     <string name="app_back_text">返回</string>
     <string name="title_activity_pull_to_zoom_recycler">PullToZoomRecyclerActivity</string>
+    <string name="title_activity_life_cycle">LifeCycleActivity</string>
 </resources>
