20150917提交修改，添加全局错误处理类

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="demo_text">使用 AsyncTask 来下载图片,同时用自定义控件显示gif</string>
-    <string name="demo_text_contentdescription">下载图片</string>
+    <string name="demo_text_content_description">下载图片</string>
 	<string name="border_top">Border Top</string>
     <string name="border_bottom">Border Bottom</string>
     <string name="image_url">Image Url</string>
@@ -38,4 +38,8 @@
     <string name="title_activity_life_cycle">LifeCycleActivity</string>
     <string name="title_activity_break_point_continue">BreakPointContinueActivity</string>
     <string name="title_activity_toast_demo">ToastDemoActivity</string>
+    <string name="title_activity_jpush_base">JPushBaseActivity</string>
+    <string name="title_activity_exception">ExceptionActivity</string>
+    <string name="custom_exception_demo_title">错误捕获demo</string>
+    <string name="custom_exception_button_txt">捕获异常</string>
 </resources>
